* [#5238] feat(api): add abiltiy to define operation * [#5238] feat(api): update to version 0002.03 * refactor(GenericRequest): use StringBuilder instead of string concat * refactor(Connect2payRESTClient): optimize the map iterator * refactor(CryptoHelper): specify the charset "utf-8" to avoid different behavior according to the platform * bump version to 1.0.4